k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector: 
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: jialiw/multi-worker
                  # since there is no other services needs to directly access worker pods, 
                  # so no need to set up ports here 
                  # no need to set associated service
