k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server # get this key-value pair from server-deployment.yaml 
    ports:
        - port: 5000
          targetPort: 5000
