k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx # telling k8s to create an ingress controller based on the nginx project
        nginx.ingress.kubernetes.io/rewrite-target: /$1 # telling k8s once finding the matched path, then replace the matched part with "/" before sending to server
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service # once the path matches "/" --> call client cluster-ip 
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
